# python-project-84

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: check_work.yml
page_analyzer/: __init__.py  app.py  data_validators.py  url_normalizer.py  url_parser.py
page_analyzer/templates/: 404.html  base.html  index.html
